# install-os

./: .gitignore  README.md  check.sh  compile_binary.sh  meson.build
base_files/: centos-7.6.1810-x86_64  fedora-21-x86_64  fedora-23-x86_64  fedora-24-x86_64  fedora-25-x86_64  fedora-26-x86_64  fedora-27-x86_64  fedora-28-x86_64  fedora-29-x86_64  fedora-30-x86_64  fedora-31-x86_64  fedora-32-x86_64
src/: AutoRelabel.gs  BaseFile.gs  BaseParameters.gs  CLI.gs  CLIOptions.gs  CLI_Options.gs  Commands.gs  Configuration.gs  ConfigurationSubjectList.gs  Filesystem.gs  GMustache.gs  InstallBase.gs  InstallBoot.gs  InstallKernel.gs  InstallRoot.gs  Interfaces.gs  Logging.gs  RootFilesystem.gs  RootPath.gs  Script.gs  SetRootPassword.gs  WriteFstab.gs  cli_options.gs  init.gs  meson.build
src/BootLoaders/: BootLoaderFactory.gs  GRUBBIOS.gs  GRUBUEFI.gs  NoBootLoader.gs  meson.build
src/CLI/: CLI.gs  CLICommands.gs  CLIOptions.gs
src/CommandLineInterface/: CommandLineInterface.gs  meson.build
src/ConfigurationScriptCommands/: Include.gs  Packages.gs
src/ConfigurationSubjects/: Configuration.gs  Include.gs  Packages.gs  Repository.gs  meson.build
src/Devices/: BlockDevice.gs  DeviceFactory.gs  FileAsDevice.gs  NoDevice.gs  meson.build
src/PackageManagers/: NoPackageManager.gs  PackageManagerFactory.gs  RPMPackageManager.gs  YumPackageManager.gs  meson.build
src/ScriptCommands/: Include.gs  Packages.gs  SetRootPassword.gs
src/boot_loaders/: BootLoaderFactory.gs  GRUBBIOS.gs  GRUBUEFI.gs  NoBootLoader.gs
src/commands/: Include.gs  Packages.gs
src/devices/: DeviceFactory.gs  FileAsDevice.gs  NoDevice.gs
src/package_managers/: PackageManagerFactory.gs  RPMPackageManager.gs
src/resources/: device.map.mustache  fstab.mustache  grub.cfg.mustache  resources.gresource.xml
test/: GMustache.gs  SetShadowPassword.gs
tests/: GMustache.gs  SetShadowPassword.gs
vapi/: augeas.vapi
