subdir( 'BootLoaders' )
subdir( 'CommandLineInterface' )
subdir( 'Devices' )
subdir( 'PackageManagers' )
subdir( 'ScriptCommands' )

sources += files(
    'AutoRelabel.gs',
    'BaseParameters.gs',
    'Commands.gs',
    'GMustache.gs',
    'init.gs',
    'InstallKernel.gs',
    'InstallRoot.gs',
    'Interfaces.gs',
    'Logging.gs',
    'RootFilesystem.gs',
    'Script.gs',
    'WriteFstab.gs',
)