subdir( 'BootLoaders' )
subdir( 'CommandLineInterface' )
subdir( 'Devices' )
subdir( 'PackageManagers' )
subdir( 'ConfigurationSubjects' )

sources += files(
    'AutoRelabel.gs',
    'BaseParameters.gs',
    'Commands.gs',
    'Configuration.gs',
    'GMustache.gs',
    'init.gs',
    'InstallKernel.gs',
    'InstallRoot.gs',
    'Interfaces.gs',
    'Logging.gs',
    'RootFilesystem.gs',
    'WriteFstab.gs',
)