subdir( 'BootLoaders' )
subdir( 'CommandLineInterface' )
subdir( 'Devices' )
subdir( 'PackageManagers' )
subdir( 'ConfigurationSubjects' )

sources += files(
    'AutoRelabel.gs',
    'BaseParameters.gs',
    'Configuration.gs',
    'ConfigurationSubjectList.gs',
    'GMustache.gs',
    'init.gs',
    'InstallKernel.gs',
    'InstallRoot.gs',
    'Interfaces.gs',
    'Logging.gs',
    'RootFilesystem.gs',
    'WriteFstab.gs',
)
